improve language id computation

prefer the mode over the highlighting to allow to
use known a highlighting with existing LSP
for a mode for a new language and own LSP

BUG: 474887